<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#5b2e7e">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mySpinner"
            android:width="200dp"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/numView"
            android:textColorHint="#e5b6bcb9"
            android:textSize="28sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:hint="@string/numHint" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/bonView"
            android:textColorHint="#e5b6bcb9"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="#ffffff"
            android:hint="@string/bonHint" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/linearLayout4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Generate"
            android:layout_marginRight="10dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="26dip"
            android:width="125dp"
            android:height="25dp"
            android:background="@drawable/custom_button"
            android:id="@+id/genBtn"
            android:textColor="#ffffff"
            tools:ignore="RtlSymmetry" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="125dp"
            android:height="25dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="40dip"
            android:background="@drawable/custom_button"
            android:text="Clear"
            android:id="@+id/clearBtn"
            android:textColor="#ffffff"
            tools:ignore="RtlSymmetry"
            android:elevation="0dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/linearLayout4"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:layout_marginRight="10dp"
            android:width="125dp"
            android:height="25dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="45dip"
            android:background="@drawable/custom_button"
            android:id="@+id/saveBtn"
            android:textColor="#ffffff"
            tools:ignore="RtlSymmetry"
            android:layout_weight="0.66" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Load"
            android:width="125dp"
            android:height="25dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="45dip"
            android:background="@drawable/custom_button"
            android:id="@+id/loadBtn"
            android:textColor="#ffffff"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</RelativeLayout>
