<resources>
    <string name="app_name">Alotto 2</string>
    <string name="bonHint">bonus numbers</string>
    <string name="numHint">your numbers</string>
    <string name="select">Select game type</string>
</resources>
